# Qt

./: Kinh nghiệm làm việc.txt  QML BEST PRACTICE.pptx
InfomationManagementApp/: SequenceDiagram.drawio
InfomationManagementApp/MyLibrary/: .gitignore  CMakeLists.txt  main.cpp
InfomationManagementApp/MyLibrary/assets/: linktaiicon.txt
InfomationManagementApp/MyLibrary/qml/: AllBookScreen.qml  Main.qml  SideBar.qml
InfomationManagementApp/MyLibrary/src/controllers/: .qmlls.ini  CMakeLists.txt  screencontroller.cpp  screencontroller.h
InfomationManagementApp/MyLibrary/src/database/: CMakeLists.txt  databasemanager.cpp  databasemanager.h
InfomationManagementApp/MyLibrary/src/logic/: CMakeLists.txt  bookmanager.cpp  bookmanager.h
InfomationManagementApp/MyLibrary/src/models/: CMakeLists.txt  bookmodel.cpp  bookmodel.h
InfomationManagementApp/MyLibrary/tests/: CMakeLists.txt
